--- a/site/playground/index.mdx
+++ b/site/playground/index.mdx
@@ -4,7 +4,7 @@ route: /ubb-playground
 ---
 
 import { Playground } from 'docz'
-import UBBPlayground from './ubb-playground.tsx'
+import UBBPlayground from './playground.tsx'
 
 # Playground
 
