--- a/site/src/index.mdx
+++ b/site/src/index.mdx
@@ -1,10 +1,11 @@
 ---
 name: YAUC
+route: /
 ---
 
 # YAUC
 
-Yet Another UBB for CC98.
+☀️ Yet Another UBB for CC98.
 
 
 ## What's this ?
@@ -14,22 +15,32 @@ Yet Another UBB for CC98.
 
 #### 作为用户：
 
-1. 学习 CC98 UBB CODE 的写法
+1. 学习 CC98 UBB Code 的写法
 
 2. 查看每个标签的渲染结果
 
 #### 作为开发者：
 
-1. 了解 YAUC 如何解析 UBB CODE
+1. 了解 YAUC 如何解析 UBB Code
 
 2. 了解如何使用 YAUC 来扩展你自己的 UBB 解析器
 
 
 ## How to use ?
 
+这里由两部分组成：
+
 `ubb-core`
 
+一个扩展性良好的 UBB 核心，提供解析 UBB 的核心能力。
+
+具体请参见 [ubb-core](/ubb-core)
+
+<br />
+
 `ubb-react`
+
+依托 core 基于 CC98 UBB 规范实现的 React 封装，开箱即用。
 
 
 ## Recruitment
