--- a/site/src/playground/index.mdx
+++ b/site/src/playground/index.mdx
@@ -1,5 +1,5 @@
 ---
-name: playground
+name: PLAYGROUND
 route: /playground
 order: 10
 ---
@@ -11,10 +11,18 @@ import UBBPlayground from '../components/UBBPlayground.tsx'
 
 ## Introduction
 
-这里是 YAUC 的交互场，你可以尝试输入任意 UBB CODE 来查看渲染结果
+这里是 YAUC 的交互场，这个交互平台基于 ubb-react 构建。
+
+你可以尝试输入任意 UBB CODE 来查看渲染结果。如果你碰巧触发了 BUG，那么请联系我们。
 
 
 ## UBBPlayground
 
 <UBBPlayground />
 
+
+## Contributors
+
+感谢以下同学积极的反馈，CC98 因你而更美好。
+
+> 等你第一个来上榜呦 😘
