--- a/site/src/ubb-core/lex.mdx
+++ b/site/src/ubb-core/lex.mdx
@@ -1,14 +1,12 @@
 ---
-name: ubb-core
-route: /ubb-core
+name: Lex
+menu: UBB-CORE
 ---
 
 import { Playground } from 'docz'
 import { lex } from 'ubb-core'
 
-# UBB-CORE
-
-## lex
+# Lex
 
 <Playground>
   {() => {
