--- a/site/src/playground/index.mdx
+++ b/site/src/playground/index.mdx
@@ -1,7 +1,7 @@
 ---
-name: PLAYGROUND
+name: Playground
 route: /playground
-order: -1
+order: 1
 ---
 
 import UBBPlayground from '../components/UBBPlayground.tsx'
