--- a/site/src/ubb-react/align.mdx
+++ b/site/src/ubb-react/align.mdx
@@ -1,15 +1,17 @@
 ---
-name: b
+name: align
 menu: UBB-REACT
 ---
 
 import UBBDisplay from '../components/UBBDisplay.tsx'
 
-# b
+# align
 
 <UBBDisplay
   text={
-`[b] I'm bold [/b]`
+`[align=left] left [/align]
+[align=center] center [/align]
+[align=right] right [/align]`
   }
 />
 
