--- a/site/src/ubb-react/del.mdx
+++ b/site/src/ubb-react/del.mdx
@@ -1,15 +1,14 @@
 ---
-name: b
+name: del
 menu: UBB-REACT
 ---
 
 import UBBDisplay from '../components/UBBDisplay.tsx'
 
-# b
+# del
 
 <UBBDisplay
   text={
-`[b] I'm bold [/b]`
+`[del] some text delete [/del]`
   }
 />
-
