--- a/site/src/ubb-react/noubb.mdx
+++ b/site/src/ubb-react/noubb.mdx
@@ -8,6 +8,8 @@ import UBBDisplay from '../components/UBBDisplay.tsx'
 # noubb
 
 <UBBDisplay
-  text="[noubb] [i] I'm not italic in [noubb] [/i] [/noubb]"
+  text={
+`[noubb] [i] I'm not italic in [noubb] [/i] [/noubb]`
+  }
 />
 
