--- a/site/src/ubb-react/u.mdx
+++ b/site/src/ubb-react/u.mdx
@@ -1,15 +1,15 @@
 ---
-name: b
+name: u
 menu: UBB-REACT
 ---
 
 import UBBDisplay from '../components/UBBDisplay.tsx'
 
-# b
+# u
 
 <UBBDisplay
   text={
-`[b] I'm bold [/b]`
+`[u] underline [/u]`
   }
 />
 
