--- a/site/src/ubb-react/i.mdx
+++ b/site/src/ubb-react/i.mdx
@@ -8,6 +8,8 @@ import UBBDisplay from '../components/UBBDisplay.tsx'
 # i
 
 <UBBDisplay
-  text="[i] I'm italic [/i]"
+  text={
+`[i] I'm italic [/i]`
+  }
 />
 
