--- a/site/src/Contribute.mdx
+++ b/site/src/Contribute.mdx
@@ -12,13 +12,13 @@ order: -1
 
 该项目的 Github 地址为： [YAUC](https://github.com/Deturium/UBB)
 
-这是一个 monorepo，其中有三个 repo
+这是一个 monorepo，其中有三个 repo，他们都在 scope `@cc98` 下
 
-- @cc98/ubb-core
-- @cc98/ubb-react
-- @cc98/ubb-site
+- `@cc98/ubb-core`
+- `@cc98/ubb-react`
+- `@cc98/ubb-site`
 
-其中 `@cc98/ubb-core` 和 `@cc98/ubb-react` 将发布在 `npm` 上，在 `scope` `@cc98`下，你可以轻松的获取到他们
+其中 `@cc98/ubb-core` 和 `@cc98/ubb-react` 将发布在 `npm` 上，你可以轻松的获取到他们
 
 `@cc09/ubb-site` 就是该文档站点，不在 `npm` 上发布
 
@@ -32,15 +32,13 @@ order: -1
 
 ## Author
 
-我是 **Hydrogen**，人称 “小氢气”
+我是 **Hydrogen**，人称 “小氢气”，我是该仓库的主要作者，我也是 CC98 技术组成员
 
-我是该仓库的主要作者，我也是 CC98 技术组成员
-
-如果你需要其他进一步的帮助，可以与我个人联系
+如果你在 YAUC 上需要其他进一步的帮助，可以与我个人联系
 
 - Email：**fanyangliang@gmail.com**
 
 
-我也欢迎你加入 CC98 技术组
+我也欢迎你加入 CC98 技术组，你可以直接与我们联系
 
 - Email：**contact@cc98.org**
