--- a/site/src/index.mdx
+++ b/site/src/index.mdx
@@ -8,6 +8,10 @@ order: 10
 
 ☀️ Yet Another UBB for CC98.
 
+`YAUC` 是一个旨在提供一系列工具帮助开发者将 CC98 的 UBB Code 转换为 html 或者 ReactNode 等形式的项目。
+
+其将作为 CC98 论坛的下一代 UBB 解析器。
+
 
 ## What's this ?
 
@@ -31,19 +35,22 @@ order: 10
 
 这里由两部分组成：
 
-`ubb-core`
+`@cc98/ubb-core`
 
 一个扩展性良好的 UBB 核心，提供解析 UBB 的核心能力。
 
+具体见左侧 `UBB-CORE` 目录下内容。
+
 <br />
 
-`ubb-react`
+`@cc98/ubb-react`
 
 依托 core 基于 CC98 UBB 规范实现的 React 封装，开箱即用。
 
+具体见左侧 `UBB-REACT` 目录下内容。
 
 ## Recruitment
 
 欢迎加入 CC98 技术组。
 
-你可以通过邮箱 contact@cc98.org 联系我们。
+你可以通过邮箱 **contact@cc98.org** 联系我们。
