--- a/site/src/ubb-core/API.mdx
+++ b/site/src/ubb-core/API.mdx
@@ -9,9 +9,9 @@ import { lex } from '@cc98/ubb-core'
 
 此处是 `ubb-core` 所有导出函数的 `API` 文档
 
-## Lex
+## lex
 
-`Lex` 函数用于将原始的 UBB 文本转换为 `Token` 流，解析出的 `Token` 流将会接下来交由 `parse` 处理
+`lex` 函数用于将原始的 UBB 文本转换为 `Token` 流，解析出的 `Token` 流将会接下来交由 `parse` 处理
 
 
 ### 函数签名
@@ -73,3 +73,19 @@ const iter = lex("[b] hello world [/b]")
   rawText: "[/b]"
 }
 ```
+
+
+## parseTagData
+
+## parse
+
+
+## build
+
+## handlerNode
+
+
+## default
+
+
+
