--- a/site/src/UBB.mdx
+++ b/site/src/UBB.mdx
@@ -8,3 +8,32 @@ order: 5
 ## What's this ?
 
 这里是 CC98 UBB 的教程。
+
+
+## CC98
+
+[CC98](https://www.cc98.org) 是浙江大学最大的校内论坛。
+
+由于学校政策限制暂时内网访问。
+
+
+## UBB
+
+UBB 代码指这样格式的代码：
+
+```
+[b]I'm bold and [i]I'm italic[/i][/b]
+```
+
+这样的代码将被渲染成：
+
+**I'm bold and _I'm italic_**
+
+<br />
+
+UBB 在防止 XSS 等风险的同时给予了用户丰富的能力，其表现力强于 markdown 等形式。但是没有严格的统一标准，CC98 的 UBB 也是定(mo)制(gai)的。
+
+我们所做的就是一个符合 CC98 论坛格式的 **专用** UBB 转换器。
+
+
+## UBB 基础教程
