--- a/site/src/ubb-core/Intro.mdx
+++ b/site/src/ubb-core/Intro.mdx
@@ -107,7 +107,7 @@ build(
 
 UBB 的 AST 表示并不复杂。
 
-具体请看左侧 [AST 目录](/ubb-core-ast) 下的详细介绍。
+具体请看左侧 [AST](/ubb-core-ast) 目录下的详细介绍。
 
 
 ## handler
@@ -116,12 +116,12 @@ UBB 的 AST 表示并不复杂。
 
 `handler` 有多种类型，最终会聚合在一起成为一个 `handlerHub` 作为参数传给 `build` 函数
 
-具体请看左侧 [handler 目录](/ubb-core-handler) 下的详细介绍
+具体请看左侧 [Handler](/ubb-core-handler) 目录下的详细介绍
 
 
 ## 导出内容
 
-现在包括默认导出 `ubb-core` 一共有 6 个函数，具体请看 [左侧 API](/ubb-core-api) 目录下的详细介绍
+现在包括默认导出 `ubb-core` 一共有 6 个函数，具体请看左侧 [API](/ubb-core-api) 目录下的详细介绍
 
 除此之外，如果你使用 Typescript，那么还有一些类型定义也被导出
 
