--- a/site/src/ubb-core/Intro.mdx
+++ b/site/src/ubb-core/Intro.mdx
@@ -93,7 +93,7 @@ const rawUBBText = 'YOUR UBB CORE HERE'
 build(
   parse(lex(rawUBBText)),
   handlerHub,  // 自定义的 handler
-  initContent, // 配合 handler 的初始化上下文
+  initContext, // 配合 handler 的初始化上下文
 )
 ```
 
