--- a/site/src/ubb-react/bili.mdx
+++ b/site/src/ubb-react/bili.mdx
@@ -1,16 +1,17 @@
+
+
 ---
-name: cursor
+name: bili
 menu: UBB-REACT
 ---
 
 import UBBDisplay from '../components/UBBDisplay.tsx'
 
-# cursor
+# bili
 
 <UBBDisplay
   text={
-`[cursor=pointer]Try to move your mouse over me! [/cursor]
-`
+`[bili]38506040[/bili]`
   }
 />
 
