--- a/site/src/ubb-react/font.mdx
+++ b/site/src/ubb-react/font.mdx
@@ -9,8 +9,7 @@ import UBBDisplay from '../components/UBBDisplay.tsx'
 
 <UBBDisplay
   text={
-`
-[font=Arial]Arial[/font]
+`[font=Arial]Arial[/font]
 [font=Times New Roman]Times New Roman[/font]
 [font=微软雅黑]微软雅黑[/font]
 [font=宋体]宋体[/font]
