--- a/site/src/ubb-react/line.mdx
+++ b/site/src/ubb-react/line.mdx
@@ -1,16 +1,15 @@
 ---
-name: cursor
+name: line
 menu: UBB-REACT
 ---
 
 import UBBDisplay from '../components/UBBDisplay.tsx'
 
-# cursor
+# line
 
 <UBBDisplay
   text={
-`[cursor=pointer]Try to move your mouse over me! [/cursor]
-`
+`[line]`
   }
 />
 
