--- a/site/src/ubb-react/needreply.mdx
+++ b/site/src/ubb-react/needreply.mdx
@@ -1,16 +1,15 @@
 ---
-name: cursor
+name: needreply
 menu: UBB-REACT
 ---
 
 import UBBDisplay from '../components/UBBDisplay.tsx'
 
-# cursor
+# needreply
 
 <UBBDisplay
   text={
-`[cursor=pointer]Try to move your mouse over me! [/cursor]
-`
+`[needreply]`
   }
 />
 
