--- a/site/src/ubb-react/quote.mdx
+++ b/site/src/ubb-react/quote.mdx
@@ -1,16 +1,15 @@
 ---
-name: cursor
+name: quote
 menu: UBB-REACT
 ---
 
 import UBBDisplay from '../components/UBBDisplay.tsx'
 
-# cursor
+# quote
 
 <UBBDisplay
   text={
-`[cursor=pointer]Try to move your mouse over me! [/cursor]
-`
+`[quote]引用1[quote]引用2[/quote][/quote]`
   }
 />
 
