--- a/site/src/Contribute.mdx
+++ b/site/src/Contribute.mdx
@@ -32,7 +32,7 @@ order: -1
 
 ## Author
 
-我是 **Hydrogen**，人称 “小氢气”，我是该仓库的主要作者，我也是 CC98 技术组成员
+我是 **Hydrogen**，是该仓库的主要作者，也是 CC98 技术组成员
 
 如果你在 YAUC 上需要其他进一步的帮助，可以与我个人联系
 
